--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 }
 
     </style>
-<button class="button button1"><b><a href="intro.html" class="learning-button">Go to Learning Section</a></b></button>
+<button class="button button1"><b><a href="sample.html" class="learning-button">Go to Learning Section</a></b></button>
 </div>
 </div>
 
